// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--error grid-row"
    role="alert"
  >
    <div
      className="display-flex flex-fill"
    >
      <div
        className="usa-alert__body grid-col flex-fill"
      >
        <h2
          className="usa-alert__heading"
        >
          Hark, an error!
        </h2>
        <p
          className="usa-alert__text"
        >
          Something's not right.
        </p>
      </div>
      <div
        className="usa-alert__body flex-auto display-flex flex-align-center"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Info 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--info grid-row"
  >
    <div
      className="display-flex flex-fill"
    >
      <div
        className="usa-alert__body grid-col flex-fill"
      >
        <h2
          className="usa-alert__heading"
        >
          Information
        </h2>
        <p
          className="usa-alert__text"
        >
          Neutral text here.
        </p>
      </div>
      <div
        className="usa-alert__body flex-auto display-flex flex-align-center"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--success grid-row"
  >
    <div
      className="display-flex flex-fill"
    >
      <div
        className="usa-alert__body grid-col flex-fill"
      >
        <h2
          className="usa-alert__heading"
        >
          Success alert!
        </h2>
        <p
          className="usa-alert__text"
        >
          Good job, you.
        </p>
      </div>
      <div
        className="usa-alert__body flex-auto display-flex flex-align-center"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--warning grid-row"
  >
    <div
      className="display-flex flex-fill"
    >
      <div
        className="usa-alert__body grid-col flex-fill"
      >
        <h2
          className="usa-alert__heading"
        >
          Watch out!
        </h2>
        <p
          className="usa-alert__text"
        >
          Is that what you meant to do?
        </p>
      </div>
      <div
        className="usa-alert__body flex-auto display-flex flex-align-center"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Base 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--base"
    onClick={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button "
    onClick={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button "
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--secondary"
    onClick={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Unstyled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--unstyled"
    onClick={[Function]}
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Checklist Box disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-checklist-disabled"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-disabled"
    >
      Checklist items
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          disabled={true}
          id="storybook-checklist-disabled-one"
          name="storybook-checklist-disabled-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-disabled-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          disabled={true}
          id="storybook-checklist-disabled-two"
          name="storybook-checklist-disabled-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-disabled-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-checklist"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist"
    >
      Checklist items
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-one"
          name="storybook-checklist-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-two"
          name="storybook-checklist-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Default selection 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-checklist-default-selection"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-default-selection"
    >
      Checklist items
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          id="storybook-checklist-default-selection-one"
          name="storybook-checklist-default-selection-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-default-selection-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          id="storybook-checklist-default-selection-two"
          name="storybook-checklist-default-selection-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-default-selection-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Horizontal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-checklist-2"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-2"
    >
      Checklist items
    </legend>
    <div
      className="grid-row flex-align-start grid-gap"
    >
      <div
        className="usa-checkbox grid-col flex-auto"
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-2-one"
          name="storybook-checklist-2-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-2-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox grid-col flex-auto"
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-2-two"
          name="storybook-checklist-2-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-2-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist With error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklis-error"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--error
      
    "
    id="storybook-checklist-with-error"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-with-error"
    >
      Checklist items
    </legend>
    <span
      className="usa-error-message"
      id="checklis-error"
      role="alert"
    >
      
       
      These fields will block your progress
    </span>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-error-one"
          name="storybook-checklist-with-error-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-error-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-error-two"
          name="storybook-checklist-with-error-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-error-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist With success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklist-success"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--success
      
    "
    id="storybook-checklist-with-success"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-with-success"
    >
      Checklist items
    </legend>
    <span
      className="usa-success-message"
      id="checklist-success"
      role="status"
    >
      
       
      These fields were validated woo
    </span>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-success-one"
          name="storybook-checklist-with-success-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-success-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-success-two"
          name="storybook-checklist-with-success-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-success-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist With warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklist-warning"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--warning
      
    "
    id="storybook-checklist-with-warning"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-checklist-with-warning"
    >
      Checklist items
    </legend>
    <span
      className="usa-warning-message"
      id="checklist-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      These fields need your attention
    </span>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-warning-one"
          name="storybook-checklist-with-warning-one"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-warning-one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="storybook-checklist-with-warning-two"
          name="storybook-checklist-with-warning-two"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="storybook-checklist-with-warning-two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group "
  >
    <label
      className="usa-label margin-top-0 "
      htmlFor="default-datepicker-date"
    >
      Pick a date
    </label>
    <span
      className="oec-date-input"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1"
          >
            <div
              className="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-default-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1"
                disabled={false}
                id="default-datepicker-date"
                name="default-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-default-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group "
  >
    <label
      className="usa-label margin-top-0 "
      htmlFor="disabled-datepicker-date"
    >
      Pick a date
    </label>
    <span
      className="oec-date-input"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__disabled SingleDatePickerInput__disabled_2"
          >
            <div
              className="DateInput DateInput_1 DateInput__disabled DateInput__disabled_2"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-disabled-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1 DateInput_input__disabled DateInput_input__disabled_2"
                disabled={true}
                id="disabled-datepicker-date"
                name="disabled-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-disabled-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Disabled with range 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="disabled-range-datepicker"
  >
    <legend
      className="usa-label"
      id="fieldset-legend-disabled-range-datepicker"
    >
      Pick a date
    </legend>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__disabled DateRangePickerInput__disabled_2"
        >
          <div
            className="DateInput DateInput_1 DateInput__disabled DateInput__disabled_2"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-disabled-range-datepicker-start-date"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1 DateInput_input__disabled DateInput_input__disabled_2"
              disabled={true}
              id="disabled-range-datepicker-start-date"
              name="disabled-range-datepicker-start-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-disabled-range-datepicker-start-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1 DateInput__disabled DateInput__disabled_2"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-disabled-range-datepicker-end-date"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1 DateInput_input__disabled DateInput_input__disabled_2"
              disabled={true}
              id="disabled-range-datepicker-end-date"
              name="disabled-range-datepicker-end-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-disabled-range-datepicker-end-date"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group  usa-form-group--error"
  >
    <label
      className="usa-label margin-top-0  usa-label--error"
      htmlFor="error-datepicker-date"
    >
      Pick a date
    </label>
    <span
      className="usa-error-message"
      id="datepicker-error"
      role="alert"
    >
      
       
      Pick a better date
    </span>
    <span
      aria-describedby="datepicker-error"
      className="oec-date-input oec-date-input--error"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1"
          >
            <div
              className="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-error-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1"
                disabled={false}
                id="error-datepicker-date"
                name="error-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-error-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Error with range 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="datepicker-error"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--error
      
    "
    id="error-datepicker"
  >
    <legend
      className="usa-label usa-label--error"
      id="fieldset-legend-error-datepicker"
    >
      Pick a date
    </legend>
    <span
      className="usa-error-message"
      id="datepicker-error"
      role="alert"
    >
      
       
      Pick a better date
    </span>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-start-date"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-start-date"
              name="error-datepicker-start-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-start-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-end-date"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-end-date"
              name="error-datepicker-end-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-end-date"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Optional 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group "
  >
    <label
      className="usa-label margin-top-0 "
      htmlFor="optional-datepicker-date"
    >
      Pick a date (Optional)
    </label>
    <span
      className="oec-date-input"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1"
          >
            <div
              className="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-optional-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1"
                disabled={false}
                id="optional-datepicker-date"
                name="optional-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-optional-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Range 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="byrange-datepicker"
  >
    <legend
      className="usa-label"
      id="fieldset-legend-byrange-datepicker"
    >
      Pick a date
    </legend>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-byrange-datepicker-start-date"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="byrange-datepicker-start-date"
              name="byrange-datepicker-start-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-byrange-datepicker-start-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-byrange-datepicker-end-date"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="byrange-datepicker-end-date"
              name="byrange-datepicker-end-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-byrange-datepicker-end-date"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group  usa-form-group--success"
  >
    <label
      className="usa-label margin-top-0  usa-label--success"
      htmlFor="error-datepicker-date"
    >
      Pick a date
    </label>
    <span
      className="usa-success-message"
      id="datepicker-success"
      role="status"
    >
      
       
      You did good
    </span>
    <span
      aria-describedby="datepicker-success"
      className="oec-date-input oec-date-input--success"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1"
          >
            <div
              className="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-error-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1"
                disabled={false}
                id="error-datepicker-date"
                name="error-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-error-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Success with range 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="datepicker-success"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--success
      
    "
    id="error-datepicker"
  >
    <legend
      className="usa-label usa-label--success"
      id="fieldset-legend-error-datepicker"
    >
      Pick a date
    </legend>
    <span
      className="usa-success-message"
      id="datepicker-success"
      role="status"
    >
      
       
      You did good
    </span>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-start-date"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-start-date"
              name="error-datepicker-start-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-start-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-end-date"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-end-date"
              name="error-datepicker-end-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-end-date"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group  usa-form-group--warning"
  >
    <label
      className="usa-label margin-top-0  usa-label--warning"
      htmlFor="error-datepicker-date"
    >
      Pick a date
    </label>
    <span
      className="usa-warning-message"
      id="datepicker-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Meh, fine
    </span>
    <span
      aria-describedby="datepicker-warning"
      className="oec-date-input oec-date-input--warning"
    >
      <div
        className="SingleDatePicker SingleDatePicker_1"
      >
        <div>
          <div
            className="SingleDatePickerInput SingleDatePickerInput_1"
          >
            <div
              className="DateInput DateInput_1"
            >
              <input
                aria-describedby="DateInput__screen-reader-message-error-datepicker-date"
                aria-label="Date"
                autoComplete="off"
                className="DateInput_input DateInput_input_1"
                disabled={false}
                id="error-datepicker-date"
                name="error-datepicker-date"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Date"
                readOnly={false}
                required={false}
                type="text"
                value="10/30/2019"
              />
              <p
                className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                id="DateInput__screen-reader-message-error-datepicker-date"
              >
                Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
              </p>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots DatePicker Warning with range 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="datepicker-warning"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--warning
      
    "
    id="error-datepicker"
  >
    <legend
      className="usa-label usa-label--warning"
      id="fieldset-legend-error-datepicker"
    >
      Pick a date
    </legend>
    <span
      className="usa-warning-message"
      id="datepicker-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Meh, fine
    </span>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-start-date"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-start-date"
              name="error-datepicker-start-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-start-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-error-datepicker-end-date"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="error-datepicker-end-date"
              name="error-datepicker-end-date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-error-datepicker-end-date"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DirectionalLink Back arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-left oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Look at the stuff you were looking at before
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Down arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-down oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Check out our sweet footer
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Forward arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    See the next thing in this series
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-right oec-directional-link__arrow--side-right"
    >
      arrowRight.svg
    </svg>
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Up arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-up oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Look at stuff at the top of the page
  </a>
</div>
`;

exports[`Storyshots Dropdown Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="default-dropdown"
    >
      Choose one of these things
    </label>
    <select
      className="usa-select"
      id="default-dropdown"
      name="default-dropdown"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="disabled-dropdown"
    >
      Choose one of these things
    </label>
    <select
      className="usa-select"
      disabled={true}
      id="disabled-dropdown"
      name="disabled-dropdown"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--error"
  >
    <label
      className="usa-label usa-label--error"
      htmlFor="dropdown-with-error"
    >
      Choose one of these things
    </label>
    <span
      className="usa-error-message"
      id="dropdown-error"
      role="alert"
    >
      
       
      Pick something else
    </span>
    <select
      aria-describedby="dropdown-error"
      className="usa-select usa-input--error"
      id="dropdown-with-error"
      name="dropdown-with-error"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--success"
  >
    <label
      className="usa-label usa-label--success"
      htmlFor="dropdown-with-success"
    >
      Choose one of these things
    </label>
    <span
      className="usa-success-message"
      id="dropdown-success"
      role="status"
    >
      
       
      You did good
    </span>
    <select
      aria-describedby="dropdown-success"
      className="usa-select usa-input--success"
      id="dropdown-with-success"
      name="dropdown-with-success"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--warning"
  >
    <label
      className="usa-label usa-label--warning"
      htmlFor="dropdown-with-success"
    >
      Choose one of these things
    </label>
    <span
      className="usa-warning-message"
      id="dropdown-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Choose wisely
    </span>
    <select
      aria-describedby="dropdown-warning"
      className="usa-select usa-input--warning"
      id="dropdown-with-success"
      name="dropdown-with-success"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots FieldSet Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="default-fieldset"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-default-fieldset"
    >
      field set
    </legend>
    <p>
      I'm inside a field set!
    </p>
  </fieldset>
</div>
`;

exports[`Storyshots FieldSet Show legend 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="show-legend-fieldset"
  >
    <legend
      className="usa-label"
      id="fieldset-legend-show-legend-fieldset"
    >
      Field set
    </legend>
    <p>
      I'm inside a field set!
    </p>
  </fieldset>
</div>
`;

exports[`Storyshots FieldSet With error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="fieldset-error"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--error
      
    "
    id="error-fieldset"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-error-fieldset"
    >
      Error field set
    </legend>
    <span
      className="usa-error-message"
      id="fieldset-error"
      role="alert"
    >
      
       
      These fields will block your progress!
    </span>
    <p>
       Uh oh! 
    </p>
    <p>
       Bad stuff happening here! 
    </p>
    <p>
       Fix it! 
    </p>
  </fieldset>
</div>
`;

exports[`Storyshots FieldSet With success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="fieldset-success"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--success
      
    "
    id="success-fieldset"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-success-fieldset"
    >
      Success field set
    </legend>
    <span
      className="usa-success-message"
      id="fieldset-success"
      role="status"
    >
      
       
      These fields are filled out and validated yay!
    </span>
    <p>
       Wow! 
    </p>
    <p>
       You're so smart! 
    </p>
    <p>
       What great form input! 
    </p>
  </fieldset>
</div>
`;

exports[`Storyshots FieldSet With warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="fieldset-warning"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--warning
      
    "
    id="warning-fieldset"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-warning-fieldset"
    >
      Warning field set
    </legend>
    <span
      className="usa-warning-message"
      id="fieldset-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      These fields need your attention!
    </span>
    <p>
       Oh no! 
    </p>
    <p>
       We have warnings! 
    </p>
    <p>
       Pay attention! 
    </p>
  </fieldset>
</div>
`;

exports[`Storyshots Header Logged in 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className=""
  >
    <div
      className="usa-overlay"
      onClick={[Function]}
    />
    <header
      className="usa-header usa-header--extended"
      role="banner"
    >
      <div
        className="usa-navbar"
      >
        <div
          className="usa-logo"
          id="extended-logo"
        >
          <em
            className="usa-logo__text"
          >
            <a
              aria-label="Hello world! home"
              href="/"
              onClick={[Function]}
            >
              Hello world!
            </a>
          </em>
        </div>
        <button
          className="usa-menu-btn"
          onClick={[Function]}
        >
          Menu
        </button>
      </div>
      <nav
        className="usa-nav"
        role="navigation"
      >
        <div
          className="usa-nav__inner"
        >
          <button
            className="usa-nav__close"
            onClick={[Function]}
          >
            <img
              alt="close"
              src="close.svg"
            />
          </button>
          <ul
            className="usa-nav__primary usa-accordion"
          >
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link usa-current"
                href="/"
                onClick={[Function]}
              >
                <span>
                  Active section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/another"
                onClick={[Function]}
              >
                <span>
                  Another section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/attention"
                onClick={[Function]}
              >
                <span>
                  Attention needed
                  <span
                    className="attention-needed"
                  >
                     •
                    <span
                      className="usa-sr-only"
                    >
                       (attention needed)
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </ul>
          <div
            className="usa-nav__secondary"
          >
            <ul
              className="usa-nav__secondary-links"
            >
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary"
                  onClick={[Function]}
                >
                  Secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary2"
                  onClick={[Function]}
                >
                  Another secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/logout"
                  onClick={[Function]}
                >
                  Log out
                </a>
              </li>
            </ul>
            <div
              className="oec-logged-in-user"
            >
              <span>
                Hi, 
                Chris
                .
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Header Logged out 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className=""
  >
    <div
      className="usa-overlay"
      onClick={[Function]}
    />
    <header
      className="usa-header usa-header--extended"
      role="banner"
    >
      <div
        className="usa-navbar"
      >
        <div
          className="usa-logo"
          id="extended-logo"
        >
          <em
            className="usa-logo__text"
          >
            <a
              aria-label="Hello world! home"
              href="/"
              onClick={[Function]}
            >
              Hello world!
            </a>
          </em>
        </div>
        <button
          className="usa-menu-btn"
          onClick={[Function]}
        >
          Menu
        </button>
      </div>
      <nav
        className="usa-nav"
        role="navigation"
      >
        <div
          className="usa-nav__inner"
        >
          <button
            className="usa-nav__close"
            onClick={[Function]}
          >
            <img
              alt="close"
              src="close.svg"
            />
          </button>
          <ul
            className="usa-nav__primary usa-accordion"
          >
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link usa-current"
                href="/"
                onClick={[Function]}
              >
                <span>
                  Active section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/another"
                onClick={[Function]}
              >
                <span>
                  Another section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/attention"
                onClick={[Function]}
              >
                <span>
                  Attention needed
                  <span
                    className="attention-needed"
                  >
                     •
                    <span
                      className="usa-sr-only"
                    >
                       (attention needed)
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </ul>
          <div
            className="usa-nav__secondary"
          >
            <ul
              className="usa-nav__secondary-links"
            >
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary"
                  onClick={[Function]}
                >
                  Secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary2"
                  onClick={[Function]}
                >
                  Another secondary item
                </a>
              </li>
            </ul>
            <div
              className="oec-logged-in-user"
            >
              <a
                href="/login"
                onClick={[Function]}
              >
                Log in
              </a>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots InlineIcon Attention needed 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--attentionNeeded"
  >
    <svg>
      error.svg
    </svg>
    <span
      className="usa-sr-only"
    >
      (
      attention needed
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots InlineIcon Complete 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--complete"
  >
    <svg>
      success.svg
    </svg>
    <span
      className="usa-sr-only"
    >
      (
      complete
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots InlineIcon Incomplete 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--incomplete"
  >
    <svg>
      error.svg
    </svg>
    <span
      className="usa-sr-only"
    >
      (
      incomplete
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots Legend Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="grid-row flex-wrap margin-y-2 grid-gap oec-legend"
  >
    <div
      className="margin-right-1"
    >
      <div
        className="oec-legend__symbol undefined"
      >
        <svg
          className="oec-legend__symbol__svg"
          height="1em"
          width="1em"
        >
          <rect
            fill="currentColor"
            height="100%"
            width="100%"
          />
        </svg>
      </div>
      <div
        className="width-fit-content display-inline margin-left-1 "
      >
        One fish
      </div>
    </div>
    <div
      className="margin-right-1"
    >
      <div
        className="oec-legend__symbol undefined"
      >
        <svg
          className="oec-legend__symbol__svg"
          height="1em"
          width="1em"
        >
          <rect
            fill="currentColor"
            height="100%"
            width="100%"
          />
        </svg>
      </div>
      <div
        className="width-fit-content display-inline margin-left-1 "
      >
        Two fish
      </div>
    </div>
    <div
      className="margin-right-1"
    >
      <div
        className="oec-legend__symbol text-red"
      >
        <svg
          className="oec-legend__symbol__svg"
          height="1em"
          width="1em"
        >
          <rect
            fill="currentColor"
            height="100%"
            width="100%"
          />
        </svg>
      </div>
      <div
        className="width-fit-content display-inline margin-left-1 "
      >
        Red fish
      </div>
    </div>
    <div
      className="margin-right-1"
    >
      <div
        className="oec-legend__symbol text-blue"
      >
        <svg
          className="oec-legend__symbol__svg"
          height="1em"
          width="1em"
        >
          <rect
            fill="currentColor"
            height="100%"
            width="100%"
          />
        </svg>
      </div>
      <div
        className="width-fit-content display-inline margin-left-1 "
      >
        Blue fish
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-radio-group"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group"
    >
      Radiogroup items
    </legend>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup Default selection 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-radio-group-default-selection"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group-default-selection"
    >
      Radiogroup items
    </legend>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          checked={true}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-default-selection-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-default-selection-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup Horizontal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="grid-gap grid-row usa-fieldset 
			
      
    "
    id="storybook-radio-group-2"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group-2"
    >
      Radiogroup items
    </legend>
    <div
      className="grid-row flex-align-start grid-gap"
    >
      <div
        className="usa-radio grid-col flex-auto"
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-2-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio grid-col flex-auto"
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-2-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup With error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="radio-group-error"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--error
      
    "
    id="storybook-radio-group-with-warning"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group-with-warning"
    >
      Radiogroup items
    </legend>
    <span
      className="usa-error-message"
      id="radio-group-error"
      role="alert"
    >
      
       
      These fields will block your progress
    </span>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          checked={true}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup With success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="radio-group-status"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--success
      
    "
    id="storybook-radio-group-with-warning"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group-with-warning"
    >
      Radiogroup items
    </legend>
    <span
      className="usa-success-message"
      id="radio-group-status"
      role="status"
    >
      
       
      This value was accepted
    </span>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          checked={true}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup With warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="radio-group-warning"
    className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--warning
      
    "
    id="storybook-radio-group-with-warning"
  >
    <legend
      className="usa-sr-only"
      id="fieldset-legend-storybook-radio-group-with-warning"
    >
      Radiogroup items
    </legend>
    <span
      className="usa-warning-message"
      id="radio-group-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      These fields need your attention
    </span>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          checked={true}
          className="usa-radio__input"
          id="one"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          checked={false}
          className="usa-radio__input"
          id="two"
          name="storybook-radio-group-with-warning-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots StepList Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <ol
    className="oec-step-list"
  >
    <li
      className="oec-step-list__step oec-step-list__step--complete"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          One small step
        </h2>
        <div
          className="oec-step-list__step__summary"
        >
          <p>
            For a man.
          </p>
        </div>
      </div>
      <div
        className="oec-step-list__step__actions"
      >
        <div
          className="oec-step-list__step__status-text"
        >
          <span
            className="oec-inline-icon oec-inline-icon--complete"
          >
            <svg>
              success.svg
            </svg>
          </span>
          Complete
        </div>
        <a
          href="/1"
          onClick={[Function]}
        >
          Edit
          <span
            className="usa-sr-only"
          >
             
            one small step
          </span>
        </a>
      </div>
    </li>
    <li
      className="oec-step-list__step oec-step-list__step--active"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          One giant leap
        </h2>
        <div
          className="oec-step-list__step__form"
        >
          <p>
            For mankind.
          </p>
        </div>
      </div>
      <div
        className="oec-step-list__step__actions"
      />
    </li>
    <li
      className="oec-step-list__step oec-step-list__step--notStarted"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          To infinity and beyond
        </h2>
      </div>
      <div
        className="oec-step-list__step__actions"
      />
    </li>
  </ol>
</div>
`;

exports[`Storyshots Table Full width 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <table
    className="oec-table oec-table--full-width"
    id="my-table"
  >
    <thead>
      <tr>
        <th
          aria-sort="ascending"
          className="oec-table__column-header oec-sortable"
          role="columnheader"
          scope="col"
          style={
            Object {
              "width": undefined,
            }
          }
        >
          <button
            aria-label="Sort table by Name in descending order"
            className="oec-table__column-title usa-button--unstyled width-full"
            onClick={[Function]}
          >
            Name
            <div
              className="oec-table__sort-controls"
            >
              <span
                className="oec-table__sort-controls__asc active"
              />
              <span
                className="oec-table__sort-controls__desc"
              />
            </div>
          </button>
        </th>
        <th
          aria-sort="ascending"
          className="oec-table__column-header oec-sortable"
          role="columnheader"
          scope="col"
          style={
            Object {
              "width": undefined,
            }
          }
        >
          <button
            aria-label="Sort table by Price in ascending order"
            className="oec-table__column-title usa-button--unstyled width-full"
            onClick={[Function]}
          >
            Price
            <div
              className="oec-table__sort-controls"
            >
              <span
                className="oec-table__sort-controls__asc"
              />
              <span
                className="oec-table__sort-controls__desc"
              />
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Apple
        </th>
        <th
          scope="row"
        >
          $0.75
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Avocado
        </th>
        <th
          scope="row"
        >
          $1.80
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Pear
        </th>
        <th
          scope="row"
        >
          $1.10
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Table Normal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <table
    className="oec-table undefined"
    id="my-table"
  >
    <thead>
      <tr>
        <th
          aria-sort="ascending"
          className="oec-table__column-header oec-sortable"
          role="columnheader"
          scope="col"
          style={
            Object {
              "width": undefined,
            }
          }
        >
          <button
            aria-label="Sort table by Name in descending order"
            className="oec-table__column-title usa-button--unstyled width-full"
            onClick={[Function]}
          >
            Name
            <div
              className="oec-table__sort-controls"
            >
              <span
                className="oec-table__sort-controls__asc active"
              />
              <span
                className="oec-table__sort-controls__desc"
              />
            </div>
          </button>
        </th>
        <th
          aria-sort="ascending"
          className="oec-table__column-header oec-sortable"
          role="columnheader"
          scope="col"
          style={
            Object {
              "width": undefined,
            }
          }
        >
          <button
            aria-label="Sort table by Price in ascending order"
            className="oec-table__column-title usa-button--unstyled width-full"
            onClick={[Function]}
          >
            Price
            <div
              className="oec-table__sort-controls"
            >
              <span
                className="oec-table__sort-controls__asc"
              />
              <span
                className="oec-table__sort-controls__desc"
              />
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Apple
        </th>
        <th
          scope="row"
        >
          $0.75
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Avocado
        </th>
        <th
          scope="row"
        >
          $1.80
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Pear
        </th>
        <th
          scope="row"
        >
          $1.10
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Tag Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="usa-tag undefined"
  >
    I AM A TAG
  </span>
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="id"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      id="id"
      name="id"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="id3"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      disabled={true}
      id="id3"
      name="id3"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--error"
  >
    <label
      className="usa-label usa-label--error"
      htmlFor="id8"
    >
      Default text input
       
    </label>
    <span
      className="usa-error-message"
      id="text-input-error"
      role="alert"
    >
      
       
      Error!
    </span>
    <input
      aria-describedby="text-input-error"
      className="usa-input usa-input--error"
      id="id8"
      name="id8"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Error inside error Fieldset 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form"
  >
    <fieldset
      aria-describedby="text-input-error"
      className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--error
       display-inline-block
    "
      id="example-fieldset-error"
    >
      <legend
        className="usa-sr-only"
        id="fieldset-legend-example-fieldset-error"
      >
        Text inputs
      </legend>
      <span
        className="usa-error-message"
        id="text-input-error"
        role="alert"
      >
        
         
        Error!
      </span>
      <div
        className="mobile-lg:grid-col-4 display-inline-block"
      >
        <div
          className="usa-form-group usa-form-group--error"
        >
          <label
            className="usa-label usa-label--error"
            htmlFor="id9"
          >
            Short
             
          </label>
          <span
            className="usa-error-message"
            id="text-input-error"
            role="alert"
          >
            
             
            Error!
          </span>
          <input
            aria-describedby="text-input-error"
            className="usa-input usa-input--error"
            id="id9"
            name="id9"
            onChange={[Function]}
            type="text"
          />
        </div>
      </div>
      <div
        className="mobile-lg:grid-col-8 display-inline-block"
      >
        <div
          className="usa-form-group usa-form-group--error"
        >
          <label
            className="usa-label usa-label--error"
            htmlFor="id10"
          >
            Long
             
          </label>
          <span
            className="usa-error-message"
            id="text-input-error"
            role="alert"
          >
            
             
            Error!
          </span>
          <input
            aria-describedby="text-input-error"
            className="usa-input usa-input--error"
            id="id10"
            name="id10"
            onChange={[Function]}
            type="text"
          />
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots TextInput Optional 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="id2"
    >
      Default optional text input
       
      <span
        className="usa-label__optional"
      >
         (optional)
      </span>
    </label>
    <input
      className="usa-input"
      id="id2"
      name="id2"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--success"
  >
    <label
      className="usa-label usa-label--success"
      htmlFor="id4"
    >
      Default text input
       
    </label>
    <span
      className="usa-success-message"
      id="text-input-success"
      role="status"
    >
      
       
      Success!
    </span>
    <input
      aria-describedby="text-input-success"
      className="usa-input usa-input--success"
      id="id4"
      name="id4"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--warning"
  >
    <label
      className="usa-label usa-label--warning"
      htmlFor="cat"
    >
      Default text input
       
    </label>
    <span
      className="usa-warning-message"
      id="text-input-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <svg>
          error.svg
        </svg>
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Warning!
    </span>
    <input
      aria-describedby="text-input-warning"
      className="usa-input usa-input--warning"
      id="cat"
      name="cat"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Warning inside warning Fieldset 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form"
  >
    <fieldset
      aria-describedby="text-input-warning"
      className="grid-gap grid-row usa-fieldset 
			 usa-fieldset--warning
       display-inline-block
    "
      id="warning-fieldset"
    >
      <legend
        className="usa-sr-only"
        id="fieldset-legend-warning-fieldset"
      >
        Text inputs
      </legend>
      <span
        className="usa-warning-message"
        id="text-input-warning"
        role="status"
      >
        <span
          className="oec-inline-icon oec-inline-icon--incomplete"
        >
          <svg>
            error.svg
          </svg>
          <span
            className="usa-sr-only"
          >
            (
            incomplete
            )
          </span>
        </span>
         
        Warning!
      </span>
      <div
        className="mobile-lg:grid-col-4 display-inline-block"
      >
        <div
          className="usa-form-group usa-form-group--warning"
        >
          <label
            className="usa-label usa-label--warning"
            htmlFor="cat"
          >
            Short
             
          </label>
          <span
            className="usa-warning-message"
            id="text-input-warning"
            role="status"
          >
            <span
              className="oec-inline-icon oec-inline-icon--incomplete"
            >
              <svg>
                error.svg
              </svg>
              <span
                className="usa-sr-only"
              >
                (
                incomplete
                )
              </span>
            </span>
             
            Warning!
          </span>
          <input
            aria-describedby="text-input-warning"
            className="usa-input usa-input--warning"
            id="cat"
            name="cat"
            onChange={[Function]}
            type="text"
          />
        </div>
      </div>
      <div
        className="mobile-lg:grid-col-8 display-inline-block"
      >
        <div
          className="usa-form-group usa-form-group--warning"
        >
          <label
            className="usa-label usa-label--warning"
            htmlFor="cat"
          >
            Long
             
          </label>
          <span
            className="usa-warning-message"
            id="text-input-warning"
            role="status"
          >
            <span
              className="oec-inline-icon oec-inline-icon--incomplete"
            >
              <svg>
                error.svg
              </svg>
              <span
                className="usa-sr-only"
              >
                (
                incomplete
                )
              </span>
            </span>
             
            Warning!
          </span>
          <input
            aria-describedby="text-input-warning"
            className="usa-input usa-input--warning"
            id="cat"
            name="cat"
            onChange={[Function]}
            type="text"
          />
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots TextInput With default value 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="id1"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      defaultValue="default text"
      id="id1"
      name="id1"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;
